<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="btn_mc">MC</string>
    <string name="btn_ms">MS</string>
    <string name="btn_mplus">M+</string>
    <string name="btn_mminus">M-</string>
    <string name="btn_ce">CE</string>
    <string name="btn_c">C</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">−</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_percent">%</string>
    <string name="btn_inverse">1/x</string>
    <string name="btn_sqrt">√</string>
    <string name="btn_sign">±</string>
    <string name="btn_equals">=</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_dot">.</string>


</resources>